# lakde

./: .gitignore  LICENSE  README.md  pyproject.toml
csrc/cuda/: W_inv_cuda.cu  W_inv_cuda.h  chol_quad_form.cu  chol_quad_form.h  convert_cuda.cu  convert_cuda.h  utils.cuh
datasets/: __init__.py  bsds300.py  gas.py  hepmass.py  miniboone.py  power.py  shapes.py  toy_data.py
experiments/: find_hparams.py  find_hparams_n.py  k_radius_estimator.py  parzen_estimator.py  plot_ax.py  plot_curves.py  plot_densities.py  plot_utils.py  run_curves.py  run_kde.py  run_utils.py  utils.py
lakde/: __init__.py  callbacks.py  kdes.py  kernels.py  linalg_util.py  local_adaptive_kde.py  local_hierarchical_kde.py  local_knn_kde.py  local_knn_kde_fixed_tau.py  local_knn_kde_inf_nu.py  local_knn_kde_prior_only.py  local_knn_kde_shared_tau.py  shared_diag_kde.py  shared_full_kde.py  shared_scalar_kde.py  sparse_util.py  utils.py
